manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sqlbot
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - name: sqlbot-route
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: sqlbot.jlzhou.svc.cluster.local
            port:
              number: 8080
